# micro-manager

./: .gitignore  build.gradle  settings.gradle
DeviceAdapters/: Makefile.am
MMCoreJ_wrap/: Makefile.am  build.gradle  build.xml  pom.xml  settings.gradle
MMCoreJ_wrap/mmcorej/: build.gradle  pom.xml
MMCoreJ_wrap/taggedimage/: build.gradle  pom.xml
acqEngine/: build.gradle
autofocus/: Makefile.am  autofocusbuild.xml  autofocuspaths.xml  autofocusprops.xml  build.gradle  build.xml
autofocus/HardwareFocusExtender/: build.xml
autofocus/MMAutofocus/: build.xml
autofocus/MMAutofocusDuo/: build.xml
autofocus/MMAutofocusTB/: build.xml
autofocus/MMOughtaFocus/: build.gradle  build.xml
autofocus/src/main/java/org/micromanager/autofocus/: OughtaFocus.java
buildscripts/: clojurebuild.xml  installer_Windows.iss  ivy.xml
buildscripts/Ant/: unixprops.xml
buildscripts/launchers/: mmimagej.in
buildscripts/nightly/: nightlybuild_OSX_defs.sh  nightlybuild_OSX_mm.sh
libraries/: Makefile.am  build.gradle
libraries/Projector/: build.gradle
libraries/ProjectorLib/: build.gradle  build.xml
mmstudio/: build.gradle  build.xml  pom.xml  settings.gradle
package/java/: build.gradle
plugins/: Makefile.am  build.gradle
plugins/ASIdiSPIM/: build.gradle
plugins/CRISP/: build.gradle
plugins/Gaussian/: build.gradle
plugins/HCS/: build.gradle
plugins/ImageFlipper/: build.gradle
plugins/MMClearVolumePlugin/: build.gradle
plugins/MMLiveFFT/: build.xml
plugins/Projector/: build.gradle
swig-doc-converter/: .gitignore  convert
(+183 files in other folders)
